--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -33,11 +33,43 @@
 .side_head {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  padding: 0 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.side_content {
+.user_name a { 
+  color: #FAFAFA;
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.create-room {
+  font-size: 10px;
+}
+
+.create-room a {
+  color: deepskyblue;
+  padding: 14px;
+  border: 1px solid lightblue;
+  background-color: #253141;
+  text-decoration: none;
+}
+
+.side_contents {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
 
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
+}
