--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,36 +12,7 @@
   </div>
 </div>
 <div class="main_contents">
-  <div class="content">
-    <div class="chat_information">
-      <div class="chat_user">
-        Tom
-      </div>
-      <div class="chat_datetime">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="chat_content">
-      <div class="chat_text">
-        おはよう
-      </div>
-    </div>
-  </div>
-  <div class="content">
-    <div class="chat_information">
-      <div class="chat_user">
-        Tom
-      </div>
-      <div class="chat_datetime">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-    <div class="chat_content">
-      <div class="chat_text">
-        おはよう
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 <%= form_with model: [@room, @message] , html: {class: "main_footer"}, local: true do |f|%>
   <div class="form">
