チャットルーム名の表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -2,7 +2,7 @@
   <div class="left-header">
     <div class="header-title">
     <%# 親要素とのmarginをとることができる %>
-      hogefuga
+      <%= @room.name %>
     </div>
   </div>
   <div class="right_header">
