--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -4,7 +4,7 @@
       <%= message.user.name %>
     </div>
     <div class="chat_datetime">
-      <%= message.created_at %>
+      <%= l message.created_at %>
     </div>
   </div>
   <div class="chat_content">
