--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -11,5 +11,6 @@
     <div class="chat_text">
       <%= message.content %>
     </div>
+    <%= image_tag message.image.variant(resize:'500x500'), class: 'message-image' %>
   </div>
 </div>
